{
    "name": "QTEInputActions",
    "maps": [
        {
            "name": "QtePossibilities",
            "id": "cac7d18d-46c1-4a18-ac91-7e6b64ddb494",
            "actions": [
                {
                    "name": "qte_1",
                    "type": "Button",
                    "id": "cd19a8b2-db56-4652-b592-6692027a9435",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "qte_2",
                    "type": "Button",
                    "id": "bae1fa02-0f32-420e-8c0e-56c13be59a10",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "qte_3",
                    "type": "Button",
                    "id": "51c16919-641b-4646-9588-e7f8c1e5568d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "qte_4",
                    "type": "Button",
                    "id": "c78f38fa-219b-4836-a842-52c6f9251f91",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "qte_5",
                    "type": "Button",
                    "id": "678ee4d2-46a3-4202-aa32-b22740ddc0c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "qte_6",
                    "type": "Button",
                    "id": "5972bfe4-db94-43b6-81b2-7a71a6133f78",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "qte_7",
                    "type": "Button",
                    "id": "45127ccf-81f0-423e-ae03-96e906a73c13",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "qte_8",
                    "type": "Button",
                    "id": "5a065182-d7c2-4907-ac6d-e4594a7ba220",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "qte_9",
                    "type": "Button",
                    "id": "89c5cb90-f172-4bbb-ab28-19cb5e9facfd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "qte_10",
                    "type": "Button",
                    "id": "29fe942e-8d09-49af-a1b4-529670246e53",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "qte_11",
                    "type": "Button",
                    "id": "2c8dd43d-8b27-480d-b653-f091ef554ed7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "qte_12",
                    "type": "Button",
                    "id": "d52865f9-3dcd-49c6-9dfb-c342ef576fdd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Randmize",
                    "type": "Button",
                    "id": "c0b8a784-5591-4c09-b893-28660b62f686",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d9ef5f49-c84a-4708-b8e1-c09025690677",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "qte_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17936d4f-c6ef-42c6-943e-4a15fbe3f5bf",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "qte_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13d49160-5ced-4834-8727-b0b5077a21da",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "qte_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a9f4aa0-7067-4e0b-b37d-3a3177c216c9",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "qte_4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5369fc9b-1815-4280-90c7-dda363cf0a79",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "qte_5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a9f011e-94cc-45fc-8bfc-afb3806af6a7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "qte_6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e9cdeba-1f0e-41d0-a70d-8baf26293dc1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "qte_7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15fd9a69-041a-4fa3-a81e-835f2d2ea85d",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "qte_8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22a3114b-7bb2-4a67-b31b-531e01e27d1c",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "qte_9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55f7d567-80a3-4c7b-a3bf-9b3c6f8c61c4",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "qte_10",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f73189c-c6a1-44eb-9c76-8b994691acf0",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "qte_11",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b3eacfb-3a2b-45c1-91ef-771b7918981d",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "qte_12",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2a80dd1-fcb5-4a3b-a033-e25bb1f35361",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Randmize",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}